FIxed landing page menu tile and scneario icon alignment

--- a/_sass/components/_scenario-cards.scss
+++ b/_sass/components/_scenario-cards.scss
@@ -60,6 +60,8 @@
   margin-bottom: 1rem;
   transition: transform 0.3s ease;
   line-height: 1;
+  display: block;
+  width: fit-content;
 }
 
 .scenario-card-title {
